--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "react": "^18",
