--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "20.12.14",
