--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@react-email/components": "0.0.19",
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.4",
     "resend": "^3.2.0"
   },
   "devDependencies": {
