--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.4",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "20.12.14",
